--- a/app/src/main/res/layout/fragment_home_kasir.xml
+++ b/app/src/main/res/layout/fragment_home_kasir.xml
@@ -63,7 +63,32 @@
         android:id="@+id/rc_list_request"
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
 
         android:clipToPadding="false" />
+
+    <TextView
+        android:id="@+id/tv_totalBayar"
+        android:layout_gravity="bottom"
+        android:textAlignment="center"
+        android:layout_marginBottom="120dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Total Bayar ?"
+        android:textSize="34sp" />
+
+    <Button
+        android:id="@+id/btn_bayar"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="BAYAR"
+        android:textSize="24sp" />
+    />
 </FrameLayout>
