--- a/app/src/main/res/layout/meminta_userman.xml
+++ b/app/src/main/res/layout/meminta_userman.xml
@@ -10,25 +10,41 @@
     android:layout_marginRight="2dp"
     android:layout_marginBottom="2dp">
 
-
-
-    <TextView
-        android:id="@+id/tv_nama"
-        android:layout_width="150dp"
+    <RelativeLayout
+        android:id="@+id/ll_tap"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:text="Nama"
-        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/tv_email"
-        android:layout_width="242dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:text="Email"
+        >
 
-        android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/tv_tap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:text=" "
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_nama"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:text="Nama"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_email"
+            android:layout_alignParentRight="true"
+            android:layout_width="242dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="4dp"
+            android:text="Email"
+
+            android:textSize="16sp" />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
