--- a/app/src/main/res/layout/fragment_home_kasir.xml
+++ b/app/src/main/res/layout/fragment_home_kasir.xml
@@ -6,10 +6,6 @@
     tools:context=".kasir.HomeKasirFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:text="@string/hello_blank_fragment" />-->
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,35 +18,20 @@
 
         android:layout_marginBottom="5dp">
 
-        <TextView
-            android:id="@+id/tv_barkod"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Code"
-            android:textSize="16sp"
-            />
 
         <TextView
             android:id="@+id/tv_nama"
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Nama"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tv_jml"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Jumlah"
 
-            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_total"
-            android:layout_width="100dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Total"
@@ -63,32 +44,10 @@
         android:id="@+id/rc_list_request"
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
 
         android:clipToPadding="false" />
 
-    <TextView
-        android:id="@+id/tv_totalBayar"
-        android:layout_gravity="bottom"
-        android:textAlignment="center"
-        android:layout_marginBottom="120dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total Bayar ?"
-        android:textSize="34sp" />
 
-    <Button
-        android:id="@+id/btn_bayar"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="BAYAR"
-        android:textSize="24sp" />
     />
 </FrameLayout>
