--- a/app/src/main/res/layout/fragment_nota_pembayaran.xml
+++ b/app/src/main/res/layout/fragment_nota_pembayaran.xml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".kasir.HomeKasirFragment">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".kasir.NotaPembayaranFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+<!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/rl_layouttransaksi"
         android:background="@color/viewfinder_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-
-
-        android:layout_marginBottom="5dp">
+        >
 
 
         <TextView
             android:id="@+id/tv_nama"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Nama"
             android:textSize="16sp" />
 
-
-
         <TextView
-            android:id="@+id/tv_total"
-            android:layout_width="190dp"
+            android:id="@+id/tv_email"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Total    "
-            android:textAlignment="viewEnd"
+            android:layout_marginRight="100dp"
+            android:text="Email"
+
             android:textSize="16sp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_list_request"
@@ -47,7 +44,4 @@
         android:layout_height="match_parent"
 
         android:clipToPadding="false" />
-
-
-    />
 </FrameLayout>
