--- a/app/src/main/res/layout/fragment_home_boss.xml
+++ b/app/src/main/res/layout/fragment_home_boss.xml
@@ -6,26 +6,22 @@
     tools:context=".owner.HomeBossFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <!--<TextView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:text="@string/hello_blank_fragment" />-->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/rl_layouttransaksi"
         android:background="@color/viewfinder_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-
-
-        android:layout_marginBottom="5dp">
+        >
 
 
         <TextView
             android:id="@+id/tv_nama"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Nama"
@@ -33,17 +29,15 @@
 
         <TextView
             android:id="@+id/tv_email"
-
-            android:layout_width="200dp"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginRight="100dp"
             android:text="Email"
 
             android:textSize="16sp" />
 
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_list_request"
