--- a/app/src/main/res/layout/meminta_transaksi.xml
+++ b/app/src/main/res/layout/meminta_transaksi.xml
@@ -29,7 +29,7 @@
 
         <TextView
             android:id="@+id/tv_namakaryawan"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Nama"
@@ -39,8 +39,9 @@
         <TextView
             android:id="@+id/tv_totalkaryawan"
             android:layout_toRightOf="@+id/tv_namakaryawan"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_marginLeft="4dp"
             android:text="Total"
             android:textAlignment="viewEnd"
