--- a/app/src/main/res/layout/meminta_userman.xml
+++ b/app/src/main/res/layout/meminta_userman.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rl_layouttuserman"
+    android:id="@+id/rl_layoutuserman"
     android:background="@color/viewfinder_border"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/tv_nama"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Nama"
@@ -36,10 +36,12 @@
 
         <TextView
             android:id="@+id/tv_email"
+            android:layout_toRightOf="@+id/tv_nama"
             android:layout_alignParentRight="true"
-            android:layout_width="242dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
+            android:textAlignment="viewEnd"
             android:text="Email"
 
             android:textSize="16sp" />
