--- a/app/src/main/res/layout/fragment_home_karyawan.xml
+++ b/app/src/main/res/layout/fragment_home_karyawan.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/rl_layout"
+        android:id="@+id/rl_layouttransaksi"
         android:background="@color/viewfinder_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
