--- a/app/src/main/res/layout/fragment_home_kasir.xml
+++ b/app/src/main/res/layout/fragment_home_kasir.xml
@@ -7,38 +7,40 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/rl_layouttransaksi"
         android:background="@color/viewfinder_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-
-
-        android:layout_marginBottom="5dp">
+        >
 
 
         <TextView
             android:id="@+id/tv_nama"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginLeft="20dp"
             android:text="Nama"
             android:textSize="16sp" />
 
 
 
+
         <TextView
             android:id="@+id/tv_total"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_alignParentRight="true"
+
+            android:layout_marginRight="20dp"
             android:text="Total    "
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_list_request"
