--- a/app/src/main/res/layout/meminta_transaksi.xml
+++ b/app/src/main/res/layout/meminta_transaksi.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="4dp"
+            android:layout_marginRight="10dp"
             android:text="Total"
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
