--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#0000ff</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="warnaNota">#00ffff</color>
+    <color name="warnaNota1">#00cc00</color>
+    <color name="warnaNota2">#33ccff</color>
 </resources>
