--- a/app/src/main/res/layout/fragment_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/fragment_transaksi_karyawan.xml
@@ -89,7 +89,19 @@
             android:textAlignment="center"
             android:text="0"
 
-             />
+            />
+
+        <TextView
+            android:id="@+id/tv_totaltransaksi1"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:text="0"
+
+            />
 
 
 
