--- a/app/src/main/res/layout/fragment_nota_pembayaran.xml
+++ b/app/src/main/res/layout/fragment_nota_pembayaran.xml
@@ -76,7 +76,8 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:layout_below="@id/rc_list_request"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
+            android:layout_marginRight="2dp"
+            android:padding="7dp"
             android:text="Rp.-"
             android:textSize="16sp"/>
 
