--- a/app/src/main/res/layout/fragment_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/fragment_transaksi_karyawan.xml
@@ -57,7 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:enabled="false"
-            android:hint="Nama Barang" />
+            android:hint="Nama Barang"
+            android:text=""/>
 
         <EditText
             android:id="@+id/et_jml"
@@ -66,6 +67,7 @@
             android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:hint="Jumlah"
+            android:text=""
             android:inputType="number" />
 
 
