--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item_edit"
-        android:title="Ubah" />
+        android:id="@+id/item_detail"
+        android:title="Detail" />
 
 
 
