--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="warnaNota">#00ffff</color>
     <color name="warnaNota1">#00cc00</color>
     <color name="warnaNota2">#33ccff</color>
+    <color name="puteh">#ffffff</color>
 </resources>
