--- a/app/src/main/res/layout/meminta_datatransaksi.xml
+++ b/app/src/main/res/layout/meminta_datatransaksi.xml
@@ -13,13 +13,15 @@
     <RelativeLayout
         android:id="@+id/ll_tap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="27"
 
 
         >
 
         <TextView
             android:id="@+id/tv_barkod"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
@@ -39,32 +41,36 @@
 
         <TextView
             android:id="@+id/tv_jml"
-            android:layout_toLeftOf="@+id/tv_total"
+            android:layout_toLeftOf="@+id/tap_edit"
             android:layout_centerInParent="true"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            android:text="J"
+            android:text="000"
 
             android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/tap_edit"
+            android:layout_toLeftOf="@+id/tv_total"
+            android:layout_centerInParent="true"
+            android:background="@color/puteh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_popup_edit"
+            />
 
         <TextView
             android:id="@+id/tv_total"
             android:layout_alignParentRight="true"
-            android:layout_width="120dp"
+            android:layout_centerInParent="true"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="7dp"
             android:text="Total"
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tv_taptransaksi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=" "
-            android:textSize="16sp"
-            />
+
 
     </RelativeLayout>
 
