--- a/app/src/main/res/layout/meminta_datatransaksi.xml
+++ b/app/src/main/res/layout/meminta_datatransaksi.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:id="@+id/ll_tap"
         android:layout_width="match_parent"
-        android:layout_height="27"
+        android:layout_height="27dp"
 
 
         >
