--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="warnaNota1">#00cc00</color>
     <color name="warnaNota2">#33ccff</color>
     <color name="puteh">#ffffff</color>
+    <color name="abang">#ff0000</color>
 </resources>
