--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,34 +6,34 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_stokBaru"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_tambah"
             android:title="Stok Baru" />
         <item
             android:id="@+id/nav_menambahStok"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_tambah"
             android:title="Menambah Stok" />
         <item
             android:id="@+id/nav_transaksi"
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/ic_menu_transaksi"
             android:title="Transaksi Penjualan" />
         <item
             android:id="@+id/nav_lihatTransaksi"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_transaksi"
             android:title="Lihat Transaksi" />
-        <item
-            android:id="@+id/nav_editBarang"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Lihat Transaksi" />
+
 
     </group>
 
     <item android:title="Communicate">
         <menu>
-
+            <item
+                android:id="@+id/nav_editBarang"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Edit Barang" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
