--- a/app/src/main/res/layout/fragment_laporan_transaksi.xml
+++ b/app/src/main/res/layout/fragment_laporan_transaksi.xml
@@ -1,68 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".kasir.NotaPembayaranFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".kasir.LaporanTransaksiFragment">
 
-<!-- TODO: Update blank fragment layout -->
-
-    <RelativeLayout
+    <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/rl_layouttransaksi"
-        android:background="@color/warnaNota"
+        android:background="@color/viewfinder_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         >
 
-        <TextView
-            android:id="@+id/tv_kode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kode   : "
-            android:textSize="18sp" />
+
 
         <TextView
-            android:id="@+id/tv_kodeTransaksi"
+            android:id="@+id/tv_namaBarang"
+            android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tv_kode"
-            android:text="-"
-            android:textSize="18sp" />
+            android:layout_marginLeft="4dp"
+            android:text="Nama Barang"
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tv_nama1"
-            android:layout_below="@id/tv_kode"
+            android:id="@+id/tv_jumlahBarang"
+            android:layout_toLeftOf="@+id/tv_totalLaba"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama : "
-            android:textSize="18sp" />
+
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="4dp"
+            android:text="Jumlah Barang"
+            android:textSize="16sp" />
+
 
         <TextView
-            android:id="@+id/tv_nama"
-            android:layout_toRightOf="@id/tv_nama1"
-            android:layout_alignBaseline="@+id/tv_nama1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"
-            android:textSize="18sp"/>
+            android:id="@+id/tv_totalLaba"
 
-        <TextView
-            android:id="@+id/tv_tanggal"
             android:layout_alignParentRight="true"
-            android:layout_alignBaseline="@id/tv_nama1"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            android:text="00/00/0000    00:00"
 
-            android:textSize="18sp" />
+            android:layout_marginRight="5dp"
+            android:text="Total Laba"
+            android:textAlignment="viewEnd"
+            android:textSize="16sp" />
 
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rc_list_request"
             android:background="@color/warnaNota"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
@@ -70,7 +61,7 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:clipToPadding="false" />
 
         <TextView
-            android:id="@+id/tv_totalnota"
+            android:id="@+id/tv_totalLaba1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -89,6 +80,7 @@ tools:context=".kasir.NotaPembayaranFragment">
             android:textSize="16sp" />
 
     </RelativeLayout>
+
 
 
 </FrameLayout>
