--- a/app/src/main/res/layout/meminta_laba.xml
+++ b/app/src/main/res/layout/meminta_laba.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_layoutTransaksiKaryawan"
+    android:id="@+id/rl_layoutLaba"
     android:background="@color/viewfinder_border"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,39 +17,42 @@
 
         >
 
-        <ImageView
-            android:id="@+id/tap_edit"
-            android:layout_centerInParent="true"
-            android:background="@color/puteh"
-            android:layout_width="16dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_popup_edit"
-            android:layout_marginRight="5dp"
-            />
+
 
 
         <TextView
-            android:id="@+id/tv_namakaryawan"
+            android:id="@+id/tv_namaBarang"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
-            android:text="Nama"
+            android:text="Nama Barang"
             android:textSize="16sp" />
 
-
         <TextView
-            android:id="@+id/tv_totalkaryawan"
-            android:layout_toRightOf="@+id/tv_namakaryawan"
-            android:layout_toLeftOf="@+id/tap_edit"
+            android:id="@+id/tv_jumlahBarang"
+            android:layout_toLeftOf="@+id/tv_totalLaba"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_marginRight="5dp"
-            android:text="Total"
+            android:layout_marginLeft="4dp"
+            android:text="Jumlah Barang"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/tv_totalLaba"
+
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginRight="5dp"
+            android:text="Total Laba"
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
 
