--- a/app/src/main/res/layout/fragment_detail_bayar.xml
+++ b/app/src/main/res/layout/fragment_detail_bayar.xml
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="BAYAR"
+        android:text="BAYAR TRANSAKSI"
         android:textSize="24sp" />
     />
 
