--- a/app/src/main/res/layout/fragment_edit_data.xml
+++ b/app/src/main/res/layout/fragment_edit_data.xml
@@ -19,7 +19,7 @@
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_gravity="center"
-            android:text="Edit Stok Data" />
+            android:text="Edit Barang" />
 
         <LinearLayout
             android:layout_width="match_parent"
