--- a/app/src/main/res/layout/fragment_tambah_data.xml
+++ b/app/src/main/res/layout/fragment_tambah_data.xml
@@ -21,12 +21,27 @@
             android:layout_gravity="center"
             android:text="Menambah Stock Baru" />
 
-        <EditText
-            android:id="@+id/et_barkod"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:hint="Scan Barcode" />
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            >
+
+            <EditText
+                android:id="@+id/et_barkod"
+                android:layout_width="270dp"
+                android:layout_height="match_parent"
+
+                android:hint="Scan Barcode" />
+
+            <Button
+                android:id="@+id/btn_barkod"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="SCAN"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
 
         <EditText
             android:id="@+id/et_nama"
